# techProg

./: .gitignore  CMakeLists.txt  GTmain.cpp  dopF.cpp  dopF.h  doxygen.config  main.cpp  main.yml  readme.md
.github/workflows/: main.yml
boost_1_77_0/stage/lib/: libboost_program_options-vc142-mt-x32-1_77.lib  libboost_program_options-vc142-mt-x64-1_77.lib
doc/html/: annotated.html  annotated_dup.js  class_test_serialization-members.html  class_test_serialization.html  classes.html  dir_0aef8ef4451d8488f048bae0463d622b.html  dir_0aef8ef4451d8488f048bae0463d622b.js  dop_f_8h.html  dop_f_8h.js  dop_f_8h_source.html  files.html  files_dup.js  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  md_readme.html  menudata.js  mult_m_8h.html  mult_m_8h.js  mult_m_8h_source.html  mult_m_elem_8h.html  mult_m_elem_8h.js  mult_m_elem_8h_source.html  navtreedata.js  navtreeindex0.js  pages.html
doc/html/search/: all_1.js  all_4.js  all_5.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
doc/latex/: annotated.tex  class_test_serialization.eps  class_test_serialization.tex  dop_f_8h.tex  dop_f_8h_source.tex  files.tex  hierarchy.tex  md_readme.tex  mult_m_8h.tex  mult_m_8h_source.tex  mult_m_elem_8h.tex  mult_m_elem_8h_source.tex  refman.tex
lib/Debug/: gtest_maind.lib
mat/: CMakeLists.txt  GTmain.cpp  GTmain.cpp.bak  multM.cpp  multM.h  multMElem.cpp  multMElem.h
